--- a/2024_Exercise_1/0_Index.ipynb
+++ b/2024_Exercise_1/0_Index.ipynb
@@ -19,7 +19,7 @@
     "|2|[Processing audio signals](2_processing_audio.ipynb)| *Array operations, list slicing, element-wise operations, multichannel signals*| \n",
     "|3|[Sinusoids and their frequency representation](3_sinusoids.ipynb)| *list slicing, frequency plots using matplotlib.* |\n",
     "|4|[Graphical analysis of an audio signal](4_audio_analysis.ipynb)| *Array operations, signal magnitude* | \n",
-    "|5|[Simple DSP system](6_digital_filter.ipynb)|*Filtering an audio signal by frequency content*| \n",
+    "|5|[Simple DSP system](5_audio_filtering.ipynb)|*Filtering an audio signal by frequency content*| \n",
     "\n",
     "### Approval of exercise\n",
     "\n",
