--- a/2024_Exercise_1/1_the_audio_file.ipynb
+++ b/2024_Exercise_1/1_the_audio_file.ipynb
@@ -191,7 +191,7 @@
     "\n",
     "## d)\n",
     "\n",
-    "Write the code to generate this plot in the codecell below. `numpy.array`, `numpy.arange` and `numpy.linspace` can all be used here. If done correctly, the resulting figure should look something like [this](Figures/auio_plot.png).\n"
+    "Write the code to generate this plot in the codecell below. `numpy.array`, `numpy.arange` and `numpy.linspace` can all be used here. If done correctly, the resulting figure should look something like [this](Figures/audio_plot.png).\n"
    ]
   },
   {
@@ -250,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.5"
   },
   "varInspector": {
    "cols": {
