--- a/2024_Exercise_1/4_audio_analysis.ipynb
+++ b/2024_Exercise_1/4_audio_analysis.ipynb
@@ -112,7 +112,7 @@
     "\n",
     "## b)\n",
     "\n",
-    "Use the function [`matplotlib.pyplot.magnitude_spectrum()`](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.magnitude_spectrum.html) as introduced in task 3 to show the magnitude spectrum $|X(f)|$ of $x(t)$ for the same time interval $12.27s \\leq t \\leq 12.33s$. Measure the space between spikes to find the fundamental frequency. <br> *P.S. If we zoom in on the lower end of the frequency axis ($0Hz \\leq f \\leq 2000Hz$), the magnitude spectrum $|X(f)|$ should look something like [this](Task4_mag1.png).*\n"
+    "Use the function [`matplotlib.pyplot.magnitude_spectrum()`](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.magnitude_spectrum.html) as introduced in task 3 to show the magnitude spectrum $|X(f)|$ of $x(t)$ for the same time interval $12.27s \\leq t \\leq 12.33s$. Measure the space between spikes to find the fundamental frequency. <br> *P.S. If we zoom in on the lower end of the frequency axis ($0Hz \\leq f \\leq 2000Hz$), the magnitude spectrum $|X(f)|$ should look something like [this](Figures/Task4_mag1.png).*\n"
    ]
   },
   {
@@ -265,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.5"
   },
   "varInspector": {
    "cols": {
