--- a/Exercise_2/1_adding_sines.ipynb
+++ b/Exercise_2/1_adding_sines.ipynb
@@ -22,8 +22,8 @@
    "id": "587b8198-f36d-46d4-a2f8-001173ed7ac7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-03T00:14:29.787027Z",
-     "start_time": "2024-09-03T00:14:28.690170Z"
+     "end_time": "2024-09-03T09:49:15.742159Z",
+     "start_time": "2024-09-03T09:49:15.564914Z"
     }
    },
    "source": [
@@ -41,7 +41,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "462597a40bc741aeac271f50544d40dc"
+       "model_id": "bc347fc761d4425483ba8fb26177f9b6"
       }
      },
      "metadata": {},
@@ -55,7 +55,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "c337073545e7449d80cb9bc1e291a9f5"
+       "model_id": "364a9614a5ef4503bf2bc52bad62b076"
       }
      },
      "metadata": {},
@@ -64,10 +64,10 @@
     {
      "data": {
       "text/plain": [
-       "<demos.VectorSumDemo at 0x79662536c990>"
+       "<demos.VectorSumDemo at 0x7727213cd010>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -90,14 +90,14 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "cef8545de20b4493be9d91c6e860f201"
+       "model_id": "d3b1ffc32a4a4d0da61820b00a4a6e88"
       }
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -125,8 +125,8 @@
      "task": false
     },
     "ExecuteTime": {
-     "end_time": "2024-09-03T00:14:38.628148Z",
-     "start_time": "2024-09-03T00:14:38.549584Z"
+     "end_time": "2024-09-03T09:49:15.819513Z",
+     "start_time": "2024-09-03T09:49:15.774062Z"
     }
    },
    "source": [
@@ -173,14 +173,14 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "70440a1cfd2d4ba1b871cbfb906d1463"
+       "model_id": "dc4de432df55454aa6da4f85fcd5d234"
       }
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -239,8 +239,8 @@
      "task": false
     },
     "ExecuteTime": {
-     "end_time": "2024-09-03T00:15:46.991497Z",
-     "start_time": "2024-09-03T00:15:46.988071Z"
+     "end_time": "2024-09-03T09:49:15.830813Z",
+     "start_time": "2024-09-03T09:49:15.827812Z"
     }
    },
    "source": [
@@ -265,7 +265,7 @@
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -295,8 +295,8 @@
      "task": false
     },
     "ExecuteTime": {
-     "end_time": "2024-09-03T00:16:29.612399Z",
-     "start_time": "2024-09-03T00:16:29.565433Z"
+     "end_time": "2024-09-03T09:49:15.923934Z",
+     "start_time": "2024-09-03T09:49:15.873664Z"
     }
    },
    "source": [
@@ -329,14 +329,14 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "b1e096db59764167be0546f022c3bfd0"
+       "model_id": "9d58689d138247269d2681b3df7ccf6b"
       }
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
-   "execution_count": 16
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
