--- a/Exercise_4/Problem3.ipynb
+++ b/Exercise_4/Problem3.ipynb
@@ -32,8 +32,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T11:44:59.738121Z",
-     "start_time": "2024-09-17T11:44:59.196815Z"
+     "end_time": "2024-09-17T12:34:40.942146Z",
+     "start_time": "2024-09-17T12:34:40.485151Z"
     }
    },
    "source": [
@@ -91,8 +91,8 @@
      "task": false
     },
     "ExecuteTime": {
-     "end_time": "2024-09-17T11:44:59.753799Z",
-     "start_time": "2024-09-17T11:44:59.743976Z"
+     "end_time": "2024-09-17T12:34:41.068303Z",
+     "start_time": "2024-09-17T12:34:41.057942Z"
     }
    },
    "source": [
@@ -169,15 +169,19 @@
      "task": false
     },
     "ExecuteTime": {
-     "end_time": "2024-09-17T11:44:59.906119Z",
-     "start_time": "2024-09-17T11:44:59.830571Z"
+     "end_time": "2024-09-17T12:34:41.232493Z",
+     "start_time": "2024-09-17T12:34:41.118426Z"
     }
    },
    "source": [
     "# WRITE YOUR CODE IN THIS CELL:\n",
     "figure = plt.figure()\n",
     "plt.magnitude_spectrum(data,Fs=fs)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "N = len(data)\n",
+    "Xm = np.fft.fft(data)\n",
+    "indices = np.where(Xm.__abs__() == np.max(Xm.__abs__()))[0]"
    ],
    "outputs": [
     {
@@ -199,7 +203,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "f36f282090c747f8bc9c81df138fa763"
+       "model_id": "e3bbc8d767d54ed59b5cdc6bc0a06717"
       }
      },
      "metadata": {},
@@ -211,8 +215,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T11:44:59.934604Z",
-     "start_time": "2024-09-17T11:44:59.933091Z"
+     "end_time": "2024-09-17T12:34:41.263837Z",
+     "start_time": "2024-09-17T12:34:41.261969Z"
     }
    },
    "cell_type": "code",
@@ -236,9 +240,7 @@
      "task": false
     }
    },
-   "source": [
-    "ANSWER THEORY QUESTIONS HERE:"
-   ]
+   "source": "ANSWER THEORY QUESTIONS HERE: First the frequency spectrum was ploted to be able to visually spot the beep tone. Then the beep tone was spoted as the magnitude with the largest value. Then the index of this magnitude was found."
   },
   {
    "cell_type": "markdown",
@@ -281,17 +283,14 @@
      "task": false
     },
     "ExecuteTime": {
-     "end_time": "2024-09-17T11:45:00.088143Z",
-     "start_time": "2024-09-17T11:44:59.980741Z"
+     "end_time": "2024-09-17T12:34:41.421268Z",
+     "start_time": "2024-09-17T12:34:41.312295Z"
     }
    },
    "source": [
-    "# WRITE YOUR CODE IN THIS CELL:\n",
-    "N = len(data)\n",
-    "Xm = np.fft.fft(data)\n",
-    "indices = np.where(Xm.__abs__() == np.max(Xm.__abs__()))[0]\n",
+    " # WRITE YOUR CODE IN THIS CELL:\n",
     "Xm[indices[0]] = 0 \n",
-    "Xm[N-indices[0]] = 0\n",
+    "Xm[N-indices[0]] = 0 # Removing the conjugate frequency.\n",
     "\n",
     "yn = np.fft.ifft(Xm)\n",
     "\n",
@@ -319,7 +318,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "9f05b56672cb43cd9de47f85bcaf9d74"
+       "model_id": "aa16061fdc98481086980013e991b0d7"
       }
      },
      "metadata": {},
@@ -344,9 +343,7 @@
      "task": false
     }
    },
-   "source": [
-    "ANSWER THEORY QUESTIONS HERE:"
-   ]
+   "source": "ANSWER THEORY QUESTIONS HERE: With the position of the beep frequency known, the frequency and conjugate frequency was removed."
   },
   {
    "cell_type": "code",
@@ -364,8 +361,8 @@
      "task": false
     },
     "ExecuteTime": {
-     "end_time": "2024-09-17T11:45:02.366995Z",
-     "start_time": "2024-09-17T11:45:02.360703Z"
+     "end_time": "2024-09-17T12:34:44.553079Z",
+     "start_time": "2024-09-17T12:34:44.546321Z"
     }
    },
    "source": [
