Updated file directories

--- a/Exercise_8/Problem_1.ipynb
+++ b/Exercise_8/Problem_1.ipynb
@@ -70,7 +70,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "Im = plt.imread(\"coins.png\")\n",
+    "Im = plt.imread(\"data/coins.png\")\n",
     "intensity_profile = Im[140,:]\n",
     "\n",
     "plt.figure()\n",
