--- a/Exercise_8/Problem_2.ipynb
+++ b/Exercise_8/Problem_2.ipynb
@@ -136,7 +136,7 @@
     "from scipy.io import loadmat\n",
     "\n",
     "# Last inn data fra fil\n",
-    "data = loadmat('Lab4.mat', squeeze_me=True)\n",
+    "data = loadmat('data/Lab4.mat', squeeze_me=True)\n",
     "Fs = data['Fs']\n",
     "pulse = data['pulse']\n",
     "xn_rx = data['xn_rx']\n",
